--- a/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
+++ b/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
@@ -7,11 +7,23 @@
 	<body>
 		<header>
 			<!-- TODO: 상단의 회색 부분은 어떻게 처리하면 좋을까요? -->
+			<img>
+				<form>
+					<button></button>
+					<input type="text">
+				</form>
+				<ul>
+					<ul><a href="http://"></a></ul>
+					<ul><a href="http://"></a></ul>
+					<ul><a href="http://"></a></ul>
+					<ul><a href="http://"></a></ul>
+				</ul>
 		</header>
 
 		<section class="main">
 			<header class="main-header">
 				<!-- TODO: 메인의 헤더 부분 -->
+				
 			</header>
 
 			<section class="main-detail">
