--- a/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
+++ b/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
@@ -13,10 +13,10 @@
 					<input type="text">
 				</form>
 				<ul>
-					<ul><a href="http://"></a></ul>
-					<ul><a href="http://"></a></ul>
-					<ul><a href="http://"></a></ul>
-					<ul><a href="http://"></a></ul>
+					<li><a href="http://"></a></ul>
+					<li><a href="http://"></a></ul>
+					<li><a href="http://"></a></ul>
+					<li><a href="http://"></a></ul>
 				</ul>
 		</header>
 
