--- a/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
+++ b/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
@@ -9,21 +9,61 @@
 			<!-- TODO: 상단의 회색 부분은 어떻게 처리하면 좋을까요? -->
 			<img>
 				<form>
-					<button></button>
-					<input type="text">
+					<label>
+						<a href="#">This repository</button>
+						<input type="text">
+					</label>
 				</form>
 				<ul>
-					<li><a href="http://"></a></ul>
-					<li><a href="http://"></a></ul>
-					<li><a href="http://"></a></ul>
-					<li><a href="http://"></a></ul>
+					<li><a href="#">Pull request</a></ul>
+					<li><a href="#">Issues</a></ul>
+					<li><a href="#">Marketplace</a></ul>
+					<li><a href="#">Explore</a></ul>
 				</ul>
 		</header>
 
 		<section class="main">
 			<header class="main-header">
 				<!-- TODO: 메인의 헤더 부분 -->
-				
+				<div id="upper">
+					<img>
+					<a href="#">KnowRe</a>/<a href="#">WebDevCurriculum</a>
+					<ul>
+						<li>
+							<form action="#">
+								<div>
+									<a href="#">Watch</a>
+									<a href="#">0</a>
+								</div>
+							</form>
+						</li>
+						<li>
+							<form action="#">
+								<div>
+									<a href="#">Star</a>
+									<a href="#">0</a>
+								</div>
+							</form>
+						</li>
+						<li>
+							<form action="#">
+								<div>
+									<a href="#">Fork</a>
+									<a href="#">0</a>
+								</div>
+							</form>
+						</li>
+					</ul>
+				</div>
+				<div id="bottom">
+					<ul class="tab">
+						<li class="tab-link" data-tab="tab1">Code</li>
+						<li class="tab-link" data-tab="tab2">Issues</li>
+						<li class="tab-link" data-tab="tab3">Pull Request</li>
+						<li class="tab-link" data-tab="tab4">Projects</li>
+						<li class="tab-link" data-tab="tab5">Insights</li>
+					</ul>
+				</div>
 			</header>
 
 			<section class="main-detail">
