--- a/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
+++ b/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
@@ -68,6 +68,76 @@
 
 			<section class="main-detail">
 				<!-- TODO: 메인의 부분 -->
+				<p>KnowRe web development curriculum for noobs</p>
+				<div id="status">
+					<ul>
+						<li><a href="#">commits</a></li>
+						<li><a href="#">branch</a></li>
+						<li><a href="#">releases</a></li>
+						<li><a href="#">contributors</a></li>
+						<li><a href="#">MIT</a></li>
+					</ul>
+				</div>
+
+				<div id="buttons">
+					<div id="left">
+						<ul>
+							<li><a href="#">Branch:master</a></li>
+							<li><a href="#">new pull request</a></li>
+						</ul>
+					</div>
+					<div id="middle">
+						<ul>
+							<li><a href="#">Create new file</a></li>
+							<li><a href="#">Upload files</a></li>
+							<li><a href="#">Find file</a></li>
+						</ul>
+					</div>
+					<div id="right">
+						<a href="#">Clone or download</a>
+					</div>
+				</div>
+
+				<div id="files">
+					<div id="files-header">
+						<div id="files-left">
+							<a href="#"><img src="" alt=""></a>
+							<a href="#">id</a>
+							<a href="#">commit message</a>
+						</div>
+						<div id="files-right">
+							latest commit time
+						</div>
+					</div>
+					<div class="file-list">
+						<table>
+							<tbody>
+								<tr class="data-raw">
+									<td><img src="" alt=""></td>
+									<td><a href="#">file name</a></td>
+									<td><a href="#">commit message</a></td>
+									<td><span></span></td>
+								</tr>
+								<tr class="data-raw">
+									<td><img src="" alt=""></td>
+									<td><a href="#">file name</a></td>
+									<td><a href="#">commit message</a></td>
+									<td><span></span></td>
+								</tr>
+								<tr class="data-raw">
+									<td><img src="" alt=""></td>
+									<td><a href="#">file name</a></td>
+									<td><a href="#">commit message</a></td>
+									<td><span></span></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+				<div id="contents">
+					<h3><img>file name</h3>
+					<article id="file-contents"></article>
+				</div>
 			</section>
 		</section>
 
