--- a/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
+++ b/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<!-- TODO: 또 무엇이 필요할까요? -->
+		<title>github imitate</title>
 	</head>
 	<body>
 		<header>
@@ -14,14 +15,14 @@
 					<input type="text">
 				</label>
 			</form>
-			<div id="header-menu">
+			<nav id="header-menu">
 				<ul>
 					<li><a href="#">Pull request</a></ul>
 					<li><a href="#">Issues</a></ul>
 					<li><a href="#">Marketplace</a></ul>
 					<li><a href="#">Explore</a></ul>
 				</ul>
-			</div>
+			</nav>
 			<div id="header-user">
 				<ul>
 					<li><a href="#">notification image</a></li>
@@ -69,7 +70,7 @@
 					</div>
 				</div>
 				<div id="bottom">
-					<div id="header-tab">
+					<nav id="header-tab">
 						<ul class="tab">
 							<li class="tab-link" data-tab="tab1">Code</li>
 							<li class="tab-link" data-tab="tab2">Issues</li>
@@ -77,7 +78,7 @@
 							<li class="tab-link" data-tab="tab4">Projects</li>
 							<li class="tab-link" data-tab="tab5">Insights</li>
 						</ul>
-					</div>
+					</nav>
 				</div>
 			</header>
 
