--- a/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
+++ b/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
@@ -159,7 +159,7 @@
 
 		<footer>
 			<!-- TODO: 하단의 Copyright, Terms, Privacy 등은 어떻게 처리하면 좋을까요? -->
-			<div class="footer-left">
+			<nav class="footer-left">
 				<ul>
 					<li>@ 2018 GitHub, Inc</li>
 					<li><a href="#">Terms</a></li>
@@ -168,11 +168,11 @@
 					<li><a href="#">Status</a></li>
 					<li><a href="#">Help</a></li>
 				</ul>
-			</div>
+			</nav>
 			<div class="footer-middle">
 				<a><img></a>
 			</div>
-			<div class="footer-right">
+			<nav class="footer-right">
 				<ul>
 					<li><a href="#">Contact GitHub</a></li>
 					<li><a href="#">API</a></li>
@@ -181,7 +181,7 @@
 					<li><a href="#">Blog</a></li>
 					<li><a href="#">About</a></li>
 				</ul>
-			</div>
+			</nav>
 		</footer>
 	</body>
 </html>
