--- a/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
+++ b/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
@@ -96,20 +96,20 @@
 				</div>
 
 				<div id="buttons">
-					<div id="left">
+					<div id="buttons-left">
 						<ul>
 							<li><a href="#">Branch:master</a></li>
 							<li><a href="#">new pull request</a></li>
 						</ul>
 					</div>
-					<div id="middle">
+					<div id="buttons-middle">
 						<ul>
 							<li><a href="#">Create new file</a></li>
 							<li><a href="#">Upload files</a></li>
 							<li><a href="#">Find file</a></li>
 						</ul>
 					</div>
-					<div id="right">
+					<div id="buttons-right">
 						<a href="#">Clone or download</a>
 					</div>
 				</div>
@@ -159,7 +159,7 @@
 
 		<footer>
 			<!-- TODO: 하단의 Copyright, Terms, Privacy 등은 어떻게 처리하면 좋을까요? -->
-			<nav class="footer-left">
+			<nav id="footer-left">
 				<ul>
 					<li>@ 2018 GitHub, Inc</li>
 					<li><a href="#">Terms</a></li>
@@ -169,10 +169,10 @@
 					<li><a href="#">Help</a></li>
 				</ul>
 			</nav>
-			<div class="footer-middle">
+			<div id="footer-middle">
 				<a><img></a>
 			</div>
-			<nav class="footer-right">
+			<nav id="footer-right">
 				<ul>
 					<li><a href="#">Contact GitHub</a></li>
 					<li><a href="#">API</a></li>
