--- a/Part 1. HTML & CSS/Quest 02. Hello, CSS/study/layout_example.html
+++ b/Part 1. HTML & CSS/Quest 02. Hello, CSS/study/layout_example.html
@@ -78,14 +78,29 @@
 
             overflow: hidden;
         }
-        #content > main_section{
+        #content > #main_section{
             width: 750px;
             float: left;
         }
-        #content > main_aside{
+        #content > #main_aside{
             width: 200px;
             float: right;
         }
+
+        #main_section > article.main_article {
+            margin-bottom: 10px;
+            padding: 20px;
+            border: 1px solid black;
+        }
+
+        /* 사이드 */
+        input:nth-of-type(1) {display: none;}
+        input:nth-of-type(1) ~ div:nth-of-type(1) {display: none;}
+        input:nth-of-type(1):checked ~ div:nth-of-type(1) {display: block;}
+
+        input:nth-of-type(2) {display: none;}
+        input:nth-of-type(2) ~ div:nth-of-type(2) {display: none;}
+        input:nth-of-type(2):checked ~ div:nth-of-type(2) {display: block;}
     </style>
 </head>
 <body>
@@ -115,24 +130,50 @@
     </header>
     <div id="content">
         <section id="main_section">
-            <h1>Main Section</h1>
-            <p>svn과 같은 툴은 파일의 변화를 시간순으로 관리하며 파일들의 집합을 관리한다.
+            <article class="main_article">
+                <h1>Main Section</h1>
+                <p>svn과 같은 툴은 파일의 변화를 시간순으로 관리하며 파일들의 집합을 관리한다.
                     git은 데이터를 파일 시스템 스냅샷으로 취급하고 크기가 아주 작다. 데이터를 스냅샷의 스트림처럼 취급한다.
                     거의 모든 명령을 로컬에서 실행한다. 이는 네트워크에 접속하는 것이 아니기에 속도가 빠르다.
                     git은 프로젝트의 히스토리를 조회할 때 서버 없이 조회. 로컬 데이터베이스의 히스토리를 읽어서 보여준다.
                     git의 무결성: git은 데이터를 저장하기 전에 항상 체크섬을 구하고 그 체크섬으로 데이터를 관리한다. 이러한 체크섬을 이해하는 git 없이는 어떠한 파일이나 디렉토리도 변경할 수 없다.
                     체크섬: git에서 사용하는 가장 기본적인 데이터 단위이자 기본 철학. 깃은 sha-1해시를 사용하여 체크섬을 만든다. 40자 길이의 16진수 문자열. 파일의 내용이나 디렉토리 구조를 이용하여 
                     체크섬을 구한다. git은 파일의 이름으로 저장하는 것이 아닌 해당 파일의 해시로 저장한다.</p>
+            </article>
+            <article class="main_article">
+                <h1>Main Section</h1>
+                <p>svn과 같은 툴은 파일의 변화를 시간순으로 관리하며 파일들의 집합을 관리한다.
+                    git은 데이터를 파일 시스템 스냅샷으로 취급하고 크기가 아주 작다. 데이터를 스냅샷의 스트림처럼 취급한다.
+                    거의 모든 명령을 로컬에서 실행한다. 이는 네트워크에 접속하는 것이 아니기에 속도가 빠르다.
+                    git은 프로젝트의 히스토리를 조회할 때 서버 없이 조회. 로컬 데이터베이스의 히스토리를 읽어서 보여준다.
+                    git의 무결성: git은 데이터를 저장하기 전에 항상 체크섬을 구하고 그 체크섬으로 데이터를 관리한다. 이러한 체크섬을 이해하는 git 없이는 어떠한 파일이나 디렉토리도 변경할 수 없다.
+                    체크섬: git에서 사용하는 가장 기본적인 데이터 단위이자 기본 철학. 깃은 sha-1해시를 사용하여 체크섬을 만든다. 40자 길이의 16진수 문자열. 파일의 내용이나 디렉토리 구조를 이용하여 
+                    체크섬을 구한다. git은 파일의 이름으로 저장하는 것이 아닌 해당 파일의 해시로 저장한다.</p>
+            </article>
         </section>
         <aside id="main_aside">
-                <h1>Main Aside</h1>
-                <p>svn과 같은 툴은 파일의 변화를 시간순으로 관리하며 파일들의 집합을 관리한다.
-                        git은 데이터를 파일 시스템 스냅샷으로 취급하고 크기가 아주 작다. 데이터를 스냅샷의 스트림처럼 취급한다.
-                        거의 모든 명령을 로컬에서 실행한다. 이는 네트워크에 접속하는 것이 아니기에 속도가 빠르다.
-                        git은 프로젝트의 히스토리를 조회할 때 서버 없이 조회. 로컬 데이터베이스의 히스토리를 읽어서 보여준다.
-                        git의 무결성: git은 데이터를 저장하기 전에 항상 체크섬을 구하고 그 체크섬으로 데이터를 관리한다. 이러한 체크섬을 이해하는 git 없이는 어떠한 파일이나 디렉토리도 변경할 수 없다.
-                        체크섬: git에서 사용하는 가장 기본적인 데이터 단위이자 기본 철학. 깃은 sha-1해시를 사용하여 체크섬을 만든다. 40자 길이의 16진수 문자열. 파일의 내용이나 디렉토리 구조를 이용하여 
-                        체크섬을 구한다. git은 파일의 이름으로 저장하는 것이 아닌 해당 파일의 해시로 저장한다.</p>
+            <input id="first" type="radio" name="tab" checked="checked">
+            <input id="second" type="radio" name="tab">
+            <section class="buttons">
+                <label for="first">First</label>
+                <label for="second">Second</label>
+            </section>
+            <div class="tab_item">
+                <ul>
+                    <li><a href="#">HTML5 Canvas</a></li>
+                    <li><a href="#">HTML5 Audio</a></li>
+                    <li><a href="#">HTML5 Video</a></li>
+                    <li><a href="#">HTML5 Semantic Web</a></li>
+                </ul>
+            </div>
+            <div class="tab_item">
+                <ul>
+                    <li><a href="#">CSS3 Transition</a></li>
+                    <li><a href="#">CSS3 Animation</a></li>
+                    <li><a href="#">CSS3 Border</a></li>
+                    <li><a href="#">CSS3 Box</a></li>
+                </ul>
+            </div>
         </aside>
     </div>
     <footer></footer>
