--- a/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
+++ b/Part 1. HTML & CSS/Quest 01. Hello, HTML/skeleton.html
@@ -9,12 +9,8 @@
 		<header>
 			<!-- TODO: 상단의 회색 부분은 어떻게 처리하면 좋을까요? -->
 			<img>
-			<form>
-				<label>
-					<a href="#">This repository</button>
-					<input type="text">
-				</label>
-			</form>
+			<a href="#">This repository</a>
+			<input type="text">
 			<nav id="header-menu">
 				<ul>
 					<li><a href="#">Pull request</a></ul>
