--- a/Part 1. HTML & CSS/Quest 02. Hello, CSS/study/layout_example.html
+++ b/Part 1. HTML & CSS/Quest 02. Hello, CSS/study/layout_example.html
@@ -101,6 +101,62 @@
         input:nth-of-type(2) {display: none;}
         input:nth-of-type(2) ~ div:nth-of-type(2) {display: none;}
         input:nth-of-type(2):checked ~ div:nth-of-type(2) {display: block;}
+
+        section.buttons{
+            overflow: hidden;
+        }
+        section.buttons > label {
+            display: block; float: left;
+
+            width: 100px; height: 30px;
+            line-height: 30px;
+            text-align: center;
+            
+            box-sizing: border-box;
+            border: 1px solid black;
+
+            background: black;
+            color: white;
+        }
+        input:nth-of-type(1):checked ~ section.buttons > label:nth-of-type(1){
+            background: white;
+            color: black;
+        }
+        input:nth-of-type(2):checked ~ section.buttons > label:nth-of-type(2){
+            background: white;
+            color: black;
+        }
+        /* 목록 */
+        .item {
+            overflow: hidden;
+            padding: 10px;
+            border: 1px solid black;
+            border-top: none;
+        }
+        .thumbnail {
+            float: left;
+        }
+        .description{
+            float: left;
+            margin-left: 10px;
+        }
+        .description > strong {
+            display: block;
+            width: 120px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        #main_footer{
+            width: 960px; margin: 0 auto;
+            margin-bottom: 10px;
+
+            box-sizing: border-box;
+            padding: 10px;
+            border: 1px solid black;
+
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -160,10 +216,50 @@
             </section>
             <div class="tab_item">
                 <ul>
-                    <li><a href="#">HTML5 Canvas</a></li>
-                    <li><a href="#">HTML5 Audio</a></li>
-                    <li><a href="#">HTML5 Video</a></li>
-                    <li><a href="#">HTML5 Semantic Web</a></li>
+                    <li class="item">
+                        <a href="#">
+                            <div class="thumbnail">
+                                <img src="http://placehold.it/45x45">
+                            </div>
+                            <div class="description">
+                                <strong>HTML5 Canvas</strong>
+                                <p>2012-03-15</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <div class="thumbnail">
+                                <img src="http://placehold.it/45x45">
+                            </div>
+                            <div class="description">
+                                <strong>HTML5 Audio</strong>
+                                <p>2012-03-15</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <div class="thumbnail">
+                                <img src="http://placehold.it/45x45">
+                            </div>
+                            <div class="description">
+                                <strong>HTML5 Video</strong>
+                                <p>2012-03-15</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#">
+                            <div class="thumbnail">
+                                <img src="http://placehold.it/45x45">
+                            </div>
+                            <div class="description">
+                                <strong>HTML5 Sematic Web</strong>
+                                <p>2012-03-15</p>
+                            </div>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="tab_item">
@@ -176,6 +272,9 @@
             </div>
         </aside>
     </div>
-    <footer></footer>
+    <footer id="main_footer">
+        <h3>HTML5 + CSS3 Basic </h3>
+        <address>Website Layout Basic</address>
+    </footer>
 </body>
 </html>
