--- a/Part 1. HTML & CSS/Quest 02. Hello, CSS/study/div-box.html
+++ b/Part 1. HTML & CSS/Quest 02. Hello, CSS/study/div-box.html
@@ -10,9 +10,13 @@
             width: 100%;
             height: 100%;
         }
+        body {
+            display: flex;
+            flex-flow: column;
+        }
         div {
-            height: 100px;
             width: 100px;
+            height: 10px;
         }
         div:nth-child(2n){
             background: red;
@@ -20,9 +24,8 @@
         div:nth-child(2n+1){
             background: blue;
         }
-        .move2, .move{
-            width: 40%;
-            height: 40%;
+        .move2{
+            flex: 1;
         }
     </style>
 </head>
@@ -30,9 +33,7 @@
     <div></div>
     <div></div>
     <div></div>
-    <div class="move2">
-        <div class="move"></div>
-    </div>
+    <div class="move2"></div>
     <div></div>
     <div></div>
     <div></div>
