--- a/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.html
+++ b/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.html
@@ -6,5 +6,178 @@
 	</head>
 	<body>
 		<!-- TODO: Quest 1에서 완성한 HTML을 바탕으로 필요한 부분을 수정해 보세요 -->
+		<header>
+				<!-- TODO: 상단의 회색 부분은 어떻게 처리하면 좋을까요? -->
+				<img>
+				<a href="#">This repository</a>
+				<input type="text">
+				<nav id="header-menu">
+					<ul>
+						<li><a href="#">Pull request</a></ul>
+						<li><a href="#">Issues</a></ul>
+						<li><a href="#">Marketplace</a></ul>
+						<li><a href="#">Explore</a></ul>
+					</ul>
+				</nav>
+				<div id="header-user">
+					<ul>
+						<li><a href="#">notification image</a></li>
+						<li><a href="#">plus mark image</a></li>
+						<li><a href="#">user profile</a></li>
+					</ul>
+				</div>
+			</header>
+	
+			<section class="main">
+				<header class="main-header">
+					<!-- TODO: 메인의 헤더 부분 -->
+					<div id="upper">
+						<div id="repository-project">
+							<img>
+							<a href="#">KnowRe</a>/<a href="#">WebDevCurriculum</a>
+						</div>
+						<div id="unwatch-star-fork-icons">
+							<ul>
+								<li>
+									<form action="#">
+										<div>
+											<a href="#">Watch</a>
+											<a href="#">0</a>
+										</div>
+									</form>
+								</li>
+								<li>
+									<form action="#">
+										<div>
+											<a href="#">Star</a>
+											<a href="#">0</a>
+										</div>
+									</form>
+								</li>
+								<li>
+									<form action="#">
+										<div>
+											<a href="#">Fork</a>
+											<a href="#">0</a>
+										</div>
+									</form>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div id="bottom">
+						<nav id="header-tab">
+							<ul class="tab">
+								<li class="tab-link" data-tab="tab1">Code</li>
+								<li class="tab-link" data-tab="tab2">Issues</li>
+								<li class="tab-link" data-tab="tab3">Pull Request</li>
+								<li class="tab-link" data-tab="tab4">Projects</li>
+								<li class="tab-link" data-tab="tab5">Insights</li>
+							</ul>
+						</nav>
+					</div>
+				</header>
+	
+				<section class="main-detail">
+					<!-- TODO: 메인의 부분 -->
+					<p>KnowRe web development curriculum for noobs</p>
+					<div id="status">
+						<ul>
+							<li><a href="#">commits</a></li>
+							<li><a href="#">branch</a></li>
+							<li><a href="#">releases</a></li>
+							<li><a href="#">contributors</a></li>
+							<li><a href="#">MIT</a></li>
+						</ul>
+					</div>
+	
+					<div id="buttons">
+						<div id="buttons-left">
+							<ul>
+								<li><a href="#">Branch:master</a></li>
+								<li><a href="#">new pull request</a></li>
+							</ul>
+						</div>
+						<div id="buttons-middle">
+							<ul>
+								<li><a href="#">Create new file</a></li>
+								<li><a href="#">Upload files</a></li>
+								<li><a href="#">Find file</a></li>
+							</ul>
+						</div>
+						<div id="buttons-right">
+							<a href="#">Clone or download</a>
+						</div>
+					</div>
+	
+					<div id="files">
+						<div id="files-header">
+							<div id="files-left">
+								<a href="#"><img src="" alt=""></a>
+								<a href="#">id</a>
+								<a href="#">commit message</a>
+							</div>
+							<div id="files-right">
+								latest commit time
+							</div>
+						</div>
+						<div class="file-list">
+							<table>
+								<tbody>
+									<tr class="data-raw">
+										<td><img src="" alt=""></td>
+										<td><a href="#">file name</a></td>
+										<td><a href="#">commit message</a></td>
+										<td><span></span></td>
+									</tr>
+									<tr class="data-raw">
+										<td><img src="" alt=""></td>
+										<td><a href="#">file name</a></td>
+										<td><a href="#">commit message</a></td>
+										<td><span></span></td>
+									</tr>
+									<tr class="data-raw">
+										<td><img src="" alt=""></td>
+										<td><a href="#">file name</a></td>
+										<td><a href="#">commit message</a></td>
+										<td><span></span></td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+					<div id="contents">
+						<h3><img>file name</h3>
+						<article id="file-contents"></article>
+					</div>
+				</section>
+			</section>
+	
+			<footer>
+				<!-- TODO: 하단의 Copyright, Terms, Privacy 등은 어떻게 처리하면 좋을까요? -->
+				<nav id="footer-left">
+					<ul>
+						<li>@ 2018 GitHub, Inc</li>
+						<li><a href="#">Terms</a></li>
+						<li><a href="#">Privacy</a></li>
+						<li><a href="#">Security</a></li>
+						<li><a href="#">Status</a></li>
+						<li><a href="#">Help</a></li>
+					</ul>
+				</nav>
+				<div id="footer-middle">
+					<a><img></a>
+				</div>
+				<nav id="footer-right">
+					<ul>
+						<li><a href="#">Contact GitHub</a></li>
+						<li><a href="#">API</a></li>
+						<li><a href="#">Training</a></li>
+						<li><a href="#">Shop</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">About</a></li>
+					</ul>
+				</nav>
+			</footer>
 	</body>
 </html>
