--- a/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.html
+++ b/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.html
@@ -6,25 +6,31 @@
 	</head>
 	<body>
 		<!-- TODO: Quest 1에서 완성한 HTML을 바탕으로 필요한 부분을 수정해 보세요 -->
-		<header>
+		<header id="header">
 				<!-- TODO: 상단의 회색 부분은 어떻게 처리하면 좋을까요? -->
-				<img>
-				<a href="#">This repository</a>
-				<input type="text">
-				<nav id="header-menu">
-					<ul>
-						<li><a href="#">Pull request</a></ul>
-						<li><a href="#">Issues</a></ul>
-						<li><a href="#">Marketplace</a></ul>
-						<li><a href="#">Explore</a></ul>
-					</ul>
-				</nav>
-				<div id="header-user">
-					<ul>
-						<li><a href="#">notification image</a></li>
-						<li><a href="#">plus mark image</a></li>
-						<li><a href="#">user profile</a></li>
-					</ul>
+				<div id="header-content">
+					<div id="header-image">
+						<a href="#"><img></a>
+					</div>
+					<div id="header-search">
+						<a href="#">This repository</a>
+						<input type="text">
+					</div>
+					<nav id="header-menu">
+						<ul>
+							<li><a href="#">Pull requests</a></li>
+							<li><a href="#">Issues</a></li>
+							<li><a href="#">Marketplace</a></li>
+							<li><a href="#">Explore</a></li>
+						</ul>
+					</nav>
+					<div id="header-user">
+						<ul>
+							<li><a href="#">notification image</a></li>
+							<li><a href="#">plus mark image</a></li>
+							<li><a href="#">user profile</a></li>
+						</ul>
+					</div>
 				</div>
 			</header>
 	
