--- a/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.html
+++ b/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.html
@@ -8,85 +8,86 @@
 		<!-- TODO: Quest 1에서 완성한 HTML을 바탕으로 필요한 부분을 수정해 보세요 -->
 		<header id="header">
 			<!-- TODO: 상단의 회색 부분은 어떻게 처리하면 좋을까요? -->
-			<div id="header-image">
-				<a href="#"><object type="image/svg+xml" data="svg/mark-github.svg"></object></a>
-			</div>
-			<div class="flex">
-				<div id="header-gnb">
-					<div id="header-search">
-						<a href="#">This repository</a>
-						<input type="text">
+			<div id="header-template" class="flex flex-justify-space width-fix">
+				<div class="flex flex-align-center">
+					<div id="header-image">
+						<a href="#"><svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg></a>
 					</div>
-					<nav id="header-menu">
-						<ul>
-							<li><a href="#">Pull requests</a></li>
-							<li><a href="#">Issues</a></li>
-							<li><a href="#">Marketplace</a></li>
-							<li><a href="#">Explore</a></li>
-						</ul>
-					</nav>
+				
+					<div id="header-gnb" class="flex flex-align-center">
+						<div id="header-search" class="flex">
+							<a class="search border-left-radius" href="#">This repository</a>
+							<input class="search border-right-radius" type="text" placeholder="Search">
+						</div>
+						<nav id="header-menu">
+							<ul>
+								<li><a href="#">Pull requests</a></li>
+								<li><a href="#">Issues</a></li>
+								<li><a href="#">Marketplace</a></li>
+								<li><a href="#">Explore</a></li>
+							</ul>
+						</nav>
+					</div>
 				</div>
-				<div id="header-icons">
+				<div id="header-icons" class="flex flex-align-center">
 					<ul>
-						<li><a href="#">notification image</a></li>
-						<li><a href="#">plus mark image</a></li>
-						<li><a href="#">user profile</a></li>
+						<li><a href="#"><svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16"><path fill-rule="evenodd" d="M13.99 11.991v1H0v-1l.73-.58c.769-.769.809-2.547 1.189-4.416.77-3.767 4.077-4.996 4.077-4.996 0-.55.45-1 .999-1 .55 0 1 .45 1 1 0 0 3.387 1.229 4.156 4.996.38 1.879.42 3.657 1.19 4.417l.659.58h-.01zM6.995 15.99c1.11 0 1.999-.89 1.999-1.999H4.996c0 1.11.89 1.999 1.999 1.999z"/></svg></a></li>
+						<li><a href="#"><svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="12" height="16" viewBox="0 0 12 16"><path fill-rule="evenodd" d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"/></svg>
+							<svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="12" height="16" viewBox="0 0 12 16"><path fill-rule="evenodd" d="M0 5l6 6 6-6H0z"/></svg></a></li>
+						<li><a href="#"><svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="12" height="16" viewBox="0 0 12 16"><path fill-rule="evenodd" d="M12 14.002a.998.998 0 0 1-.998.998H1.001A1 1 0 0 1 0 13.999V13c0-2.633 4-4 4-4s.229-.409 0-1c-.841-.62-.944-1.59-1-4 .173-2.413 1.867-3 3-3s2.827.586 3 3c-.056 2.41-.159 3.38-1 4-.229.59 0 1 0 1s4 1.367 4 4v1.002z"/></svg>
+							<svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="12" height="16" viewBox="0 0 12 16"><path fill-rule="evenodd" d="M0 5l6 6 6-6H0z"/></svg></a></li>
 					</ul>
 				</div>
+				
 			</div>
 		</header>
 	
 		<section class="main">
 			<header class="main-header">
 				<!-- TODO: 메인의 헤더 부분 -->
-				<div id="upper">
-					<div id="repository-project">
-						<object></object>
-						<a href="#">KnowRe</a>/<a href="#">WebDevCurriculum</a>
+				<div class="width-fix">
+					<div id="upper" class="flex flex-justify-space flex-align-center">
+						<div id="repository-project">
+							<svg fill="#828282" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 12 16"><path fill-rule="evenodd" d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z"/></svg>
+							<a class="repo" href="#">KnowRe</a><span class="repo">/</span><a class="repo" href="#">WebDevCurriculum</a>
+						</div>
+						<div id="main-icons" class="flex">
+							<div class="btn flex">
+								<a class="border-around border-left-radius left-button" href="#">
+									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 -2 16 16"><path fill-rule="evenodd" d="M8.06 2C3 2 0 8 0 8s3 6 8.06 6C13 14 16 8 16 8s-3-6-7.94-6zM8 12c-2.2 0-4-1.78-4-4 0-2.2 1.8-4 4-4 2.22 0 4 1.8 4 4 0 2.22-1.78 4-4 4zm2-4c0 1.11-.89 2-2 2-1.11 0-2-.89-2-2 0-1.11.89-2 2-2 1.11 0 2 .89 2 2z"/></svg>
+									Unwatch
+									<svg xmlns="http://www.w3.org/2000/svg" width="12" height="16" viewBox="0 -2 12 16"><path fill-rule="evenodd" d="M0 5l6 6 6-6H0z"/></svg></a></a>
+								<a class="border-around border-right-radius right-button" href="#">0</a>
+							</div>
+							<div class="btn flex">
+								<a class="border-around border-left-radius left-button" href="#">
+										<svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 -2 14 16"><path fill-rule="evenodd" d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"/></svg>
+										Star</a>
+								<a class="border-around border-right-radius right-button" href="#">0</a>
+							</div>
+							<div class="btn flex">
+								<a class="border-around border-left-radius left-button" href="#">
+									<svg xmlns="http://www.w3.org/2000/svg" width="10" height="16" viewBox="0 -1 10 16"><path fill-rule="evenodd" d="M8 1a1.993 1.993 0 0 0-1 3.72V6L5 8 3 6V4.72A1.993 1.993 0 0 0 2 1a1.993 1.993 0 0 0-1 3.72V6.5l3 3v1.78A1.993 1.993 0 0 0 5 15a1.993 1.993 0 0 0 1-3.72V9.5l3-3V4.72A1.993 1.993 0 0 0 8 1zM2 4.2C1.34 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3 10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3-10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z"/></svg>
+									Fork</a>
+								<a class="border-around border-right-radius right-button" href="#">0</a>
+							</div>
+						</div>
 					</div>
-					<div id="main-icons">
-						<ul>
-							<li>
-								<form action="#">
-									<div>
-										<a href="#">Watch</a>
-										<a href="#">0</a>
-									</div>
-								</form>
-							</li>
-							<li>
-								<form action="#">
-									<div>
-										<a href="#">Star</a>
-										<a href="#">0</a>
-									</div>
-								</form>
-							</li>
-							<li>
-								<form action="#">
-									<div>
-										<a href="#">Fork</a>
-										<a href="#">0</a>
-									</div>
-								</form>
-							</li>
-						</ul>
+					<div id="bottom" class="flex">
+						<nav id="content-tab">
+							<ul class="tab flex flex-row">
+								<li class="tab-link active" data-tab="tab1"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="1 -3 14 16"><path fill-rule="evenodd" d="M9.5 3L8 4.5 11.5 8 8 11.5 9.5 13 14 8 9.5 3zm-5 0L0 8l4.5 5L6 11.5 2.5 8 6 4.5 4.5 3z"/></svg>Code</a></li>
+								<li class="tab-link" data-tab="tab2"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="1 -1 14 16"><path fill-rule="evenodd" d="M7 2.3c3.14 0 5.7 2.56 5.7 5.7s-2.56 5.7-5.7 5.7A5.71 5.71 0 0 1 1.3 8c0-3.14 2.56-5.7 5.7-5.7zM7 1C3.14 1 0 4.14 0 8s3.14 7 7 7 7-3.14 7-7-3.14-7-7-7zm1 3H6v5h2V4zm0 6H6v2h2v-2z"/></svg>Issues</a></li>
+								<li class="tab-link" data-tab="tab3"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="1 0 12 16"><path fill-rule="evenodd" d="M11 11.28V5c-.03-.78-.34-1.47-.94-2.06C9.46 2.35 8.78 2.03 8 2H7V0L4 3l3 3V4h1c.27.02.48.11.69.31.21.2.3.42.31.69v6.28A1.993 1.993 0 0 0 10 15a1.993 1.993 0 0 0 1-3.72zm-1 2.92c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zM4 3c0-1.11-.89-2-2-2a1.993 1.993 0 0 0-1 3.72v6.56A1.993 1.993 0 0 0 2 15a1.993 1.993 0 0 0 1-3.72V4.72c.59-.34 1-.98 1-1.72zm-.8 10c0 .66-.55 1.2-1.2 1.2-.65 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2zM2 4.2C1.34 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z"/></svg>Pull Request</a></li>
+								<li class="tab-link" data-tab="tab4"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="3 -1 10 17"><path fill-rule="evenodd" d="M10 12h3V2h-3v10zm-4-2h3V2H6v8zm-4 4h3V2H2v12zm-1 1h13V1H1v14zM14 0H1a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h13a1 1 0 0 0 1-1V1a1 1 0 0 0-1-1z"/></svg>Projects</a></li>
+								<li class="tab-link" data-tab="tab5"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" viewBox="1 -1 16 16"><path fill-rule="evenodd" d="M16 14v1H0V0h1v14h15zM5 13H3V8h2v5zm4 0H7V3h2v10zm4 0h-2V6h2v7z"/></svg>Insights</a></li>
+							</ul>
+						</nav>
 					</div>
-				</div>
-				<div id="bottom">
-					<nav id="content-tab">
-						<ul class="tab">
-							<li class="tab-link" data-tab="tab1">Code</li>
-							<li class="tab-link" data-tab="tab2">Issues</li>
-							<li class="tab-link" data-tab="tab3">Pull Request</li>
-							<li class="tab-link" data-tab="tab4">Projects</li>
-							<li class="tab-link" data-tab="tab5">Insights</li>
-						</ul>
-					</nav>
 				</div>
 			</header>
 
-			<section class="main-detail">
+			<section class="main-detail width-fix">
 				<!-- TODO: 메인의 부분 -->
 				<div id="status">
 					<div id="inform">
@@ -178,7 +179,7 @@
 			</section>
 		</section>
 
-		<footer>
+		<footer class="width-fix">
 			<!-- TODO: 하단의 Copyright, Terms, Privacy 등은 어떻게 처리하면 좋을까요? -->
 			<div class="flex flex-justify-space">
 				<nav id="footer-left" class="fnb">
@@ -192,7 +193,7 @@
 					</ul>
 				</nav>
 				<div id="footer-middle">
-					<a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg></a>
+					<a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg></a>
 				</div>
 				<nav id="footer-right" class="fnb">
 					<ul>
