--- a/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.html
+++ b/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.html
@@ -53,20 +53,20 @@
 						</div>
 						<div id="main-icons" class="flex">
 							<div class="btn flex">
-								<a class="border-around border-left-radius left-button" href="#">
+								<a class="border-around border-left-radius buttons" href="#">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 -2 16 16"><path fill-rule="evenodd" d="M8.06 2C3 2 0 8 0 8s3 6 8.06 6C13 14 16 8 16 8s-3-6-7.94-6zM8 12c-2.2 0-4-1.78-4-4 0-2.2 1.8-4 4-4 2.22 0 4 1.8 4 4 0 2.22-1.78 4-4 4zm2-4c0 1.11-.89 2-2 2-1.11 0-2-.89-2-2 0-1.11.89-2 2-2 1.11 0 2 .89 2 2z"/></svg>
 									Unwatch
 									<svg xmlns="http://www.w3.org/2000/svg" width="12" height="16" viewBox="0 -2 12 16"><path fill-rule="evenodd" d="M0 5l6 6 6-6H0z"/></svg></a></a>
 								<a class="border-around border-right-radius right-button" href="#">0</a>
 							</div>
 							<div class="btn flex">
-								<a class="border-around border-left-radius left-button" href="#">
+								<a class="border-around border-left-radius buttons" href="#">
 										<svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 -2 14 16"><path fill-rule="evenodd" d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"/></svg>
 										Star</a>
 								<a class="border-around border-right-radius right-button" href="#">0</a>
 							</div>
 							<div class="btn flex">
-								<a class="border-around border-left-radius left-button" href="#">
+								<a class="border-around border-left-radius buttons" href="#">
 									<svg xmlns="http://www.w3.org/2000/svg" width="10" height="16" viewBox="0 -1 10 16"><path fill-rule="evenodd" d="M8 1a1.993 1.993 0 0 0-1 3.72V6L5 8 3 6V4.72A1.993 1.993 0 0 0 2 1a1.993 1.993 0 0 0-1 3.72V6.5l3 3v1.78A1.993 1.993 0 0 0 5 15a1.993 1.993 0 0 0 1-3.72V9.5l3-3V4.72A1.993 1.993 0 0 0 8 1zM2 4.2C1.34 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3 10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3-10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z"/></svg>
 									Fork</a>
 								<a class="border-around border-right-radius right-button" href="#">0</a>
@@ -93,39 +93,54 @@
 					<div id="inform">
 						<p>KnowRe web development curriculum for noobs</p>
 					</div>
-					<div id="status-status">
+					<div id="status-status" class="border-left-radius border-right-radius">
 						<div id="status-icons">
-							<ul>
-								<li><a href="#">commits</a></li>
-								<li><a href="#">branch</a></li>
-								<li><a href="#">releases</a></li>
-								<li><a href="#">contributors</a></li>
-								<li><a href="#">MIT</a></li>
+							<ul class="status-grid">
+								<li><a href="#">
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 -1 14 16"><path fill-rule="evenodd" d="M8 13H6V6h5v2H8v5zM7 1C4.81 1 2.87 2.02 1.59 3.59L0 2v4h4L2.5 4.5C3.55 3.17 5.17 2.3 7 2.3c3.14 0 5.7 2.56 5.7 5.7s-2.56 5.7-5.7 5.7A5.71 5.71 0 0 1 1.3 8c0-.34.03-.67.09-1H.08C.03 7.33 0 7.66 0 8c0 3.86 3.14 7 7 7s7-3.14 7-7-3.14-7-7-7z"/></svg>
+										<span class="number">0</span> commits</a></li>
+								<li><a href="#">
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 -1 10 16"><path fill-rule="evenodd" d="M10 5c0-1.11-.89-2-2-2a1.993 1.993 0 0 0-1 3.72v.3c-.02.52-.23.98-.63 1.38-.4.4-.86.61-1.38.63-.83.02-1.48.16-2 .45V4.72a1.993 1.993 0 0 0-1-3.72C.88 1 0 1.89 0 3a2 2 0 0 0 1 1.72v6.56c-.59.35-1 .99-1 1.72 0 1.11.89 2 2 2 1.11 0 2-.89 2-2 0-.53-.2-1-.53-1.36.09-.06.48-.41.59-.47.25-.11.56-.17.94-.17 1.05-.05 1.95-.45 2.75-1.25S8.95 7.77 9 6.73h-.02C9.59 6.37 10 5.73 10 5zM2 1.8c.66 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2C1.35 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2zm0 12.41c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm6-8c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z"/></svg>
+										<span class="number">0</span> branch</a></li>
+								<li><a href="#">
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 -1 14 16"><path fill-rule="evenodd" d="M7.685 1.72a2.49 2.49 0 0 0-1.76-.726H3.48A2.5 2.5 0 0 0 .994 3.48v2.456c0 .656.269 1.292.726 1.76l6.024 6.024a.99.99 0 0 0 1.402 0l4.563-4.563a.99.99 0 0 0 0-1.402L7.685 1.72zM2.366 7.048A1.54 1.54 0 0 1 1.9 5.925V3.48c0-.874.716-1.58 1.58-1.58h2.456c.418 0 .825.159 1.123.467l6.104 6.094-4.702 4.702-6.094-6.114zm.626-4.066h1.989v1.989H2.982V2.982h.01z"/></svg>
+										<span class="number">0</span> releases</a></li>
+								<li><a href="#">
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 -1 16 16"><path fill-rule="evenodd" d="M16 12.999c0 .439-.45 1-1 1H7.995c-.539 0-.994-.447-.995-.999H1c-.54 0-1-.561-1-1 0-2.634 3-4 3-4s.229-.409 0-1c-.841-.621-1.058-.59-1-3 .058-2.419 1.367-3 2.5-3s2.442.58 2.5 3c.058 2.41-.159 2.379-1 3-.229.59 0 1 0 1s1.549.711 2.42 2.088C9.196 9.369 10 8.999 10 8.999s.229-.409 0-1c-.841-.62-1.058-.59-1-3 .058-2.419 1.367-3 2.5-3s2.437.581 2.495 3c.059 2.41-.158 2.38-1 3-.229.59 0 1 0 1s3.005 1.366 3.005 4z"/></svg>
+										<span class="number">0</span> contributors</a></li>
+								<li><a href="#">
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 -1 14 16"><path fill-rule="evenodd" d="M7 4c-.83 0-1.5-.67-1.5-1.5S6.17 1 7 1s1.5.67 1.5 1.5S7.83 4 7 4zm7 6c0 1.11-.89 2-2 2h-1c-1.11 0-2-.89-2-2l2-4h-1c-.55 0-1-.45-1-1H8v8c.42 0 1 .45 1 1h1c.42 0 1 .45 1 1H3c0-.55.58-1 1-1h1c0-.55.58-1 1-1h.03L6 5H5c0 .55-.45 1-1 1H3l2 4c0 1.11-.89 2-2 2H2c-1.11 0-2-.89-2-2l2-4H1V5h3c0-.55.45-1 1-1h4c.55 0 1 .45 1 1h3v1h-1l2 4zM2.5 7L1 10h3L2.5 7zM13 10l-1.5-3-1.5 3h3z"/></svg>
+										MIT</a></li>
 							</ul>
 						</div>
-						<div id="status-bar">
-
+						<div id="status-bar" class="flex";>
+							<div class="red"></div>
+							<div class="yellow"></div>
+							<div class="navy"></div>
 						</div>
 					</div>
 				</div>
 
-				<div id="content-directory-buttons">
+				<div id="content-directory-buttons" class="flex flex-justify-space">
 					<div id="git-buttons">
-						<ul>
-							<li><a href="#">Branch:master</a></li>
-							<li><a href="#">new pull request</a></li>
+						<ul class="flex">
+							<li><a class="buttons border-around border-radius-around" href="#">Branch:master</a></li>
+							<li><a class="buttons border-around border-radius-around" href="#">new pull request</a></li>
 						</ul>
 					</div>
-					<div id="import-export-buttons">
-						<div id="file-buttons">
-							<ul>
-								<li><a href="#">Create new file</a></li>
-								<li><a href="#">Upload files</a></li>
-								<li><a href="#">Find file</a></li>
+					<div id="import-export-buttons" class="flex">
+						<div id="file-buttons" >
+							<ul class="flex">
+								<li><a class="buttons border-around border-left-radius" href="#">Create new file</a></li>
+								<li><a class="buttons border-around" href="#">Upload files</a></li>
+								<li><a class="buttons border-around border-right-radius" href="#">Find file</a></li>
 							</ul>
 						</div>
 						<div id="download-clone-botton">
-							<a href="#">Clone or download</a>
+							<a class="border-around border-radius-around" href="#">
+								Clone or download
+								<svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="12" height="16" viewBox="0 -2 12 16"><path fill-rule="evenodd" d="M0 5l6 6 6-6H0z"/></svg>
+							</a>
 						</div>
 					</div>
 				</div>
