--- a/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.html
+++ b/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.html
@@ -20,7 +20,7 @@
 							<input class="search border-right-radius" type="text" placeholder="Search">
 						</div>
 						<nav id="header-menu">
-							<ul>
+							<ul class="flex">
 								<li><a href="#">Pull requests</a></li>
 								<li><a href="#">Issues</a></li>
 								<li><a href="#">Marketplace</a></li>
@@ -30,7 +30,7 @@
 					</div>
 				</div>
 				<div id="header-icons" class="flex flex-align-center">
-					<ul>
+					<ul class="flex">
 						<li><a href="#"><svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16"><path fill-rule="evenodd" d="M13.99 11.991v1H0v-1l.73-.58c.769-.769.809-2.547 1.189-4.416.77-3.767 4.077-4.996 4.077-4.996 0-.55.45-1 .999-1 .55 0 1 .45 1 1 0 0 3.387 1.229 4.156 4.996.38 1.879.42 3.657 1.19 4.417l.659.58h-.01zM6.995 15.99c1.11 0 1.999-.89 1.999-1.999H4.996c0 1.11.89 1.999 1.999 1.999z"/></svg></a></li>
 						<li><a href="#"><svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="12" height="16" viewBox="0 0 12 16"><path fill-rule="evenodd" d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"/></svg>
 							<svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="12" height="16" viewBox="0 0 12 16"><path fill-rule="evenodd" d="M0 5l6 6 6-6H0z"/></svg></a></li>
@@ -146,17 +146,17 @@
 				</div>
 
 				<div id="content-directory">
-					<div id="content-directory-header">
-						<div id="files-left">
-							<a href="#"><img src="" alt=""></a>
-							<a href="#">id</a>
-							<a href="#">commit message</a>
+					<div id="content-directory-header" class="flex flex-justify-space flex-align-center">
+						<div id="files-left" class="flex">
+							<a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="12" height="16" viewBox="0 0 12 16"><path fill-rule="evenodd" d="M12 14.002a.998.998 0 0 1-.998.998H1.001A1 1 0 0 1 0 13.999V13c0-2.633 4-4 4-4s.229-.409 0-1c-.841-.62-.944-1.59-1-4 .173-2.413 1.867-3 3-3s2.827.586 3 3c-.056 2.41-.159 3.38-1 4-.229.59 0 1 0 1s4 1.367 4 4v1.002z"/></svg></a>
+							<a id="user" href="#">id</a>
+							<a id="commit-message" href="#">commit message</a>
 						</div>
 						<div id="files-right">
 							latest commit time
 						</div>
 					</div>
-					<div class="file-list">
+					<div id="file-list" class="file-list border-around">
 						<table>
 							<tbody>
 								<tr class="data-raw">
@@ -181,14 +181,17 @@
 						</table>
 					</div>
 				</div>
-				<div id="file-viewer">
+				<div id="file-viewer" class="border-around border-radius-around">
 					<div id="file-viewer-header">
-						<h3><img>file name</h3>
+						<h3>
+							<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 -2 16 16"><path fill-rule="evenodd" d="M3 5h4v1H3V5zm0 3h4V7H3v1zm0 2h4V9H3v1zm11-5h-4v1h4V5zm0 2h-4v1h4V7zm0 2h-4v1h4V9zm2-6v9c0 .55-.45 1-1 1H9.5l-1 1-1-1H2c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h5.5l1 1 1-1H15c.55 0 1 .45 1 1zm-8 .5L7.5 3H2v9h6V3.5zm7-.5H9.5l-.5.5V12h6V3z"/></svg>
+							file name
+						</h3>
 					</div>
 					<article id="file-contents">
-						<p>
+						<h1>
 							KnowRe web developement curriculum 2018
-						</p>
+						</h1>
 					</article>
 				</div>
 			</section>
@@ -198,7 +201,7 @@
 			<!-- TODO: 하단의 Copyright, Terms, Privacy 등은 어떻게 처리하면 좋을까요? -->
 			<div class="flex flex-justify-space">
 				<nav id="footer-left" class="fnb">
-					<ul>
+					<ul class="flex">
 						<li>@ 2018 GitHub, Inc</li>
 						<li><a href="#">Terms</a></li>
 						<li><a href="#">Privacy</a></li>
@@ -211,7 +214,7 @@
 					<a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg></a>
 				</div>
 				<nav id="footer-right" class="fnb">
-					<ul>
+					<ul class="flex">
 						<li><a href="#">Contact GitHub</a></li>
 						<li><a href="#">API</a></li>
 						<li><a href="#">Training</a></li>
