--- a/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.html
+++ b/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.html
@@ -149,36 +149,40 @@
 					<div id="content-directory-header" class="flex flex-justify-space flex-align-center">
 						<div id="files-left" class="flex">
 							<a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="12" height="16" viewBox="0 0 12 16"><path fill-rule="evenodd" d="M12 14.002a.998.998 0 0 1-.998.998H1.001A1 1 0 0 1 0 13.999V13c0-2.633 4-4 4-4s.229-.409 0-1c-.841-.62-.944-1.59-1-4 .173-2.413 1.867-3 3-3s2.827.586 3 3c-.056 2.41-.159 3.38-1 4-.229.59 0 1 0 1s4 1.367 4 4v1.002z"/></svg></a>
-							<a id="user" href="#">id</a>
-							<a id="commit-message" href="#">commit message</a>
+							<a id="user" class="message-color" href="#">id</a>
+							<a id="commit-message" class="message-color" href="#">commit message</a>
 						</div>
 						<div id="files-right">
 							latest commit time
 						</div>
 					</div>
 					<div id="file-list" class="file-list border-around">
-						<table>
-							<tbody>
-								<tr class="data-raw">
-									<td><img src="" alt=""></td>
-									<td><a href="#">file name</a></td>
-									<td><a href="#">commit message</a></td>
-									<td><span></span></td>
-								</tr>
-								<tr class="data-raw">
-									<td><img src="" alt=""></td>
-									<td><a href="#">file name</a></td>
-									<td><a href="#">commit message</a></td>
-									<td><span></span></td>
-								</tr>
-								<tr class="data-raw">
-									<td><img src="" alt=""></td>
-									<td><a href="#">file name</a></td>
-									<td><a href="#">commit message</a></td>
-									<td><span></span></td>
-								</tr>
-							</tbody>
-						</table>
+						<ul>
+							<li class="data-raw">
+								<div>
+									<svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16"><path fill-rule="evenodd" d="M13 4H7V3c0-.66-.31-1-1-1H1c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zM6 4H1V3h5v1z"/></svg>
+									<a href="#" >folder name</a>
+								</div>
+								<div><a href="#" class="message-color">commit message</a></div>
+								<div>date</div>
+							</li>
+							<li class="data-raw">
+								<div>
+									<svg xmlns="http://www.w3.org/2000/svg" width="12" height="16" viewBox="0 0 12 16"><path fill-rule="evenodd" d="M6 5H2V4h4v1zM2 8h7V7H2v1zm0 2h7V9H2v1zm0 2h7v-1H2v1zm10-7.5V14c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1V2c0-.55.45-1 1-1h7.5L12 4.5zM11 5L8 2H1v12h10V5z"/></svg>
+									<a href="#" >file name</a>
+								</div>
+								<div><a href="#" class="message-color">commit message</a></div>
+								<div>date</div>
+							</li>
+							<li class="data-raw">
+								<div>
+									<svg xmlns="http://www.w3.org/2000/svg" width="12" height="16" viewBox="0 0 12 16"><path fill-rule="evenodd" d="M6 5H2V4h4v1zM2 8h7V7H2v1zm0 2h7V9H2v1zm0 2h7v-1H2v1zm10-7.5V14c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1V2c0-.55.45-1 1-1h7.5L12 4.5zM11 5L8 2H1v12h10V5z"/></svg>
+									<a href="#" >file name</a>
+								</div>
+								<div><a href="#" class="message-color">commit message</a></div>
+								<div>date</div>
+							</li>
+						</ul>
 					</div>
 				</div>
 				<div id="file-viewer" class="border-around border-radius-around">
