--- a/Part 2. JavaScript/Quest 05. Playing with DOM/skeleton/quest.html
+++ b/Part 2. JavaScript/Quest 05. Playing with DOM/skeleton/quest.html
@@ -36,11 +36,27 @@
 			let row1Squares = document.querySelectorAll('.row1 .square');
 			for(let node of row1Squares) {
 				/* TODO: node 변수를 어떻게 조작해야 할까요? */
+				node.addEventListener("click", ()=>{
+					if(node.style.backgroundColor !== "yellow"){
+						node.style.backgroundColor = "yellow";
+					}else{
+						node.style.backgroundColor = "white";
+					}
+				});
 			}
 
 			let row2Squares = document.querySelectorAll('.row2 .square');
 			for(let node of row2Squares) {
 				/* TODO: node 변수를 어떻게 조작해야 할까요? */
+				node.addEventListener("click", ()=>{
+					// node.classList.toggle("enabled");
+					if(node.classList.contains("enabled")){
+					node.classList.remove("enabled");
+					}else{
+						node.classList.add("enabled");
+					}
+				});
+				
 			}
 		</script>
 	</body>
