--- a/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/skeleton/desktop.html
+++ b/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/skeleton/desktop.html
@@ -7,11 +7,13 @@
 	</head>
 	<body>
 		<section class="desktop">
+			<div class="box" draggable="true"></div>
 		</section>
 
 		<script>
 			let myDesktop = new Desktop(
 				/* TODO: myDesktop 인스턴스의 생성자의 변수로 무엇이 들어가야 할까요? */
+				
 			);
 		</script>
 	</body>
