--- a/Part 2. JavaScript/Quest 07. JavaScript OOP - Practice/skeleton/desktop.html
+++ b/Part 2. JavaScript/Quest 07. JavaScript OOP - Practice/skeleton/desktop.html
@@ -13,7 +13,7 @@
 		<script>
 			let myDesktop = new Desktop(
 				/* TODO: myDesktop 인스턴스의 생성자의 변수로 무엇이 들어가야 할까요? */
-				".desktop:nth-child(1)"
+				".desktop:nth-child(1)", 5, 3
 			);
 			// let myDesktop2 = new Desktop(
 			// 	/* TODO: myDesktop 인스턴스의 생성자의 변수로 무엇이 들어가야 할까요? */
