--- a/Part 2. JavaScript/Quest 07. JavaScript OOP - Practice/skeleton/desktop.html
+++ b/Part 2. JavaScript/Quest 07. JavaScript OOP - Practice/skeleton/desktop.html
@@ -8,8 +8,8 @@
 	<body>
 		<section class="desktop">
 		</section>
-		<section class="desktop">
-		</section>
+		<!-- <section class="desktop">
+		</section> -->
 		<script>
 			let col ="";
 			for(let _ of document.querySelectorAll(".desktop")) col += "1fr "
@@ -18,10 +18,10 @@
 				/* TODO: myDesktop 인스턴스의 생성자의 변수로 무엇이 들어가야 할까요? */
 				".desktop:nth-child(1)", 2, 1
 			);
-			let myDesktop2 = new Desktop(
-				/* TODO: myDesktop 인스턴스의 생성자의 변수로 무엇이 들어가야 할까요? */
-				".desktop:nth-child(2)", 2, 3
-			);
+			// let myDesktop2 = new Desktop(
+			// 	/* TODO: myDesktop 인스턴스의 생성자의 변수로 무엇이 들어가야 할까요? */
+			// 	".desktop:nth-child(2)", 2, 3
+			// );
 		</script>
 	</body>
 </html>
