--- a/Part 2. JavaScript/Quest 08. Midterm project/project/midterm.html
+++ b/Part 2. JavaScript/Quest 08. Midterm project/project/midterm.html
@@ -7,6 +7,57 @@
 	</head>
 	<body>
         <section class="app"></section>
+        <template id="add">
+            <div class="add-area">
+                <div class="name-tag-area">
+                    <input type="text" class="name">
+                    <input type="text" class="tag">
+                </div>
+                <div class="add-buttons-area">
+                    <button class="add-button">추가</button>
+                </div>
+            </div>
+        </template>
+        <template id="plan-area">
+            <div class="plans-area">
+                <div class="plans-contents-area"></div>
+                <div class="plans-buttons-area">
+                    <button class="buttons">정렬</button>
+                    <button class="buttons">모두 삭제</button>
+                </div>
+            </div>
+        </template>
+        <template id="plan">
+            <div class="plan-area">
+                <div class="name-tag-area">
+                    <div class="name"></div>
+                    <div class="tag"></div>
+                </div>
+                <div class="plan-clock-area">
+                    <span class="time">00</span> : 
+                    <span class="time">00</span> : 
+                    <span class="time">00</span>
+                </div>
+                <div class="plan-buttons-area">
+                    <button class="button">시작</button>
+                    <button class="button">리셋</button>
+                    <button class="button">삭제</button>
+                </div>
+            </div>
+        </template>
+        <template id="result-area">
+            <div class="results-area">
+                <div class="results-contents-area"></div>
+                <div class="results-info-area"></div>
+            </div>
+        </template>
+        <template id="result">
+            <div class="result-tag">
+                <div class="result-tag"></div>
+                <div class="result-name"></div>
+                <div class="result-time"></div>
+            </div>
+        </template>
         <script>
             const app = new App();
         </script>    
