--- a/Part 2. JavaScript/Quest 08. Midterm project/project/midterm.html
+++ b/Part 2. JavaScript/Quest 08. Midterm project/project/midterm.html
@@ -7,6 +7,8 @@
 	</head>
 	<body>
         <section class="app"></section>
+
+        <!-- add button template -->
         <template id="add">
             <div class="add-area">
                 <div class="name-tag-area">
@@ -14,16 +16,18 @@
                     <input type="text" class="tag">
                 </div>
                 <div class="add-buttons-area">
-                    <button class="add-button">추가</button>
+                    <button class="button">추가</button>
                 </div>
             </div>
         </template>
-        <template id="plan-area">
+
+        <!-- plans area template -->
+        <template id="plans-area">
             <div class="plans-area">
                 <div class="plans-contents-area"></div>
                 <div class="plans-buttons-area">
-                    <button class="buttons">정렬</button>
-                    <button class="buttons">모두 삭제</button>
+                    <button class="button">정렬</button>
+                    <button class="button">모두 삭제</button>
                 </div>
             </div>
         </template>
@@ -45,19 +49,25 @@
                 </div>
             </div>
         </template>
-        <template id="result-area">
+
+        <!-- result area template -->
+        <template id="results-area">
             <div class="results-area">
                 <div class="results-contents-area"></div>
                 <div class="results-info-area"></div>
             </div>
         </template>
+        <template id="result-tag-area">
+            <div class="result-tag-area"></div>
+        </template>
         <template id="result">
-            <div class="result-tag">
+            <div class="result">
                 <div class="result-tag"></div>
                 <div class="result-name"></div>
                 <div class="result-time"></div>
             </div>
         </template>
+
         <script>
             const app = new App();
         </script>    
